# CMakeSandbox

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Greeting/: CMakeLists.txt  greeting.cpp
Greeting/include/: greeting.h
new_feature/: CMakeLists.txt  feature1.cpp
new_feature/include/: feature1.h
